[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1.0"
bincode = "1.0.0"
serde = { version = "1.0", features = ["derive"] }

